fix: theme flicker, smooth theme switch

--- a/app/app.scss
+++ b/app/app.scss
@@ -12,18 +12,17 @@
   --chart-3: #46464f;
 
   --primary-radius: 4px;
-
-  .dark {
-    --background-color: #000027;
-    --foreground-color: #ffffff;
-    --muted-color: #090935;
-    --muted-foreground-color: #d0cfd6;
-    --border-color: #30265f;
-
-    --chart-3: #d0d0d6;
-  }
 }
 
+.dark {
+  --background-color: #000027;
+  --foreground-color: #ffffff;
+  --muted-color: #090935;
+  --muted-foreground-color: #d0cfd6;
+  --border-color: #30265f;
+
+  --chart-3: #d0d0d6;
+}
 
 * {
   box-sizing: border-box;
@@ -35,6 +34,7 @@ body {
   color: var(--foreground-color);
   background-color: var(--background-color);
   font-family: "Roboto", sans-serif;
+  transition: background-color 0.1s ease-in;
 }
 
 button {
